--- a/Main/index.html
+++ b/Main/index.html
@@ -21,8 +21,8 @@
                 <ul>
                     <li><a href="#">HOME</a></li>
                     <li><a href="https://www.instagram.com/carefusion55/">ABOUT</a></li>
-                    <li><a href="exercises.html">EXERCISES</a></li>
-                    <li><a href="/Users/abhivesh/Desktop/CareFusion/Blogs/index.html">BLOGS</a></li>
+                    <li><a href="">EXERCISES</a></li>
+                    <li><a href="/Blogs/index.html">BLOGS</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
