--- a/SignIN/index.html
+++ b/SignIN/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <form action="/Users/abhivesh/Desktop/CareFusion/Main/index.html">
+    <form action="/Main/index.html">
       <h1>Login</h1>
       <div class="input-box">
         <input type="text" placeholder="Username" required>
